# myprojector

./: README.md  index.html  package-lock.json  package.json
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/hymnes/: cantique.db  fihirana_antema.db  fihirana_fanampiny.db  fihirana_ffpm.db  humnes&louanges.db
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: BackgroundVideo.tsx  LeftSidebar.tsx  LiveView.tsx  MiddleEditor.tsx  RightProjection.tsx  Store.tsx  Toolbar.tsx
