[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tauri-plugin-shell = "2.0.0-rc.0"
tauri-plugin-dialog = "2.0.0-rc.0"
reqwest = { version = "0.13", default-features = false, features = ["stream", "blocking", "native-tls", "json"] }
tauri-plugin-fs = "2"

[profile.release]
# Reduce memory usage during builds by limiting parallel codegen units
codegen-units = 1
# Helps with memory usage compared to full LTO
lto = "thin"
# Further optimization
opt-level = 3
# Strip symbols to reduce final binary size
strip = true

